# stealth-browser-mcp

./: .gitignore  Dockerfile  HALL_OF_FAME.md  README.md  SECURITY.md  STEALTH_TESTS.md  pyproject.toml  requirements.txt  test.py
src/: browser_manager.py  cdp_function_executor.py  debug_logger.py  dom_handler.py  dynamic_hook_ai_interface.py  file_based_element_cloner.py  file_upload_security.py  http_security.py  models.py  network_interceptor.py  platform_utils.py  process_cleanup.py  proxy_forwarder.py  proxy_utils.py  response_handler.py  server.py
